--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -80,7 +80,7 @@
                                 <frame key="frameInset" minX="480" minY="230" width="22" height="22"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
-                                    <segue destination="0dB-jU-sOJ" kind="presentation" modalTransitionStyle="flipHorizontal" id="at7-yJ-Wzu"/>
+                                    <segue destination="0dB-jU-sOJ" kind="show" id="uFc-Q9-uGP"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Round:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBU-el-TvH">
@@ -108,8 +108,10 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <toolbarItems/>
+                    <nil key="simulatedStatusBarMetrics"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="closeLabel" destination="vVl-eU-kV7" id="2qA-gm-gpO"/>
                         <outlet property="roundLabel" destination="CK4-3h-5Xs" id="vdR-JM-ACm"/>
                         <outlet property="scoreLabel" destination="WYj-MK-EQU" id="0zP-QV-7Vk"/>
                         <outlet property="slider" destination="Cvl-WI-wdl" id="WSv-VZ-YkN"/>
@@ -121,10 +123,10 @@
             </objects>
             <point key="canvasLocation" x="87" y="-135"/>
         </scene>
-        <!--View Controller-->
+        <!--About View Controller-->
         <scene sceneID="Hsw-S0-Q3D">
             <objects>
-                <viewController id="0dB-jU-sOJ" sceneMemberID="viewController">
+                <viewController id="0dB-jU-sOJ" userLabel="About View Controller" customClass="AboutViewController" customModule="BullsEye" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gt4-Ck-3LE"/>
                         <viewControllerLayoutGuide type="bottom" id="miQ-c8-o36"/>
@@ -142,9 +144,12 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Led-7b-Ka7">
-                                <frame key="frameInset" minX="262" minY="240" width="44" height="30"/>
+                                <frame key="frameInset" minX="262" minY="240" width="116" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Close"/>
+                                <connections>
+                                    <action selector="close" destination="0dB-jU-sOJ" eventType="touchUpInside" id="ivC-nD-HGc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -152,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UG7-bp-r4b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="820" y="-135"/>
+            <point key="canvasLocation" x="819.71830985915494" y="-135"/>
         </scene>
     </scenes>
 </document>
